--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>        
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="base_url" content="{{{baseUrl}}}">
-        <meta name="csrf_token" content="{{{csrfToken}}}">    
-        <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />    
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />   -->
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">                     
-        <link rel="stylesheet" href="{{{bundle_styling}}}">                
-    </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="application"></div>
-        <script src="{{{bundle_js}}}"></script>
-    </body>
+<!doctype html>
+    <html lang="en"> 
+    <head> 
+        <meta charset="utf-8"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
+        <meta name="theme-color" content="#e34225"> 
+        <meta name="base_url" content="{{{baseUrl}}}"> 
+        <meta name="csrf_token" content="{{{csrfToken}}}"> 
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://www.qasir.id/images/favicons/apple-touch-icon-144x144.png"/> 
+        <link rel="icon" type="image/png" href="https://www.qasir.id/images/favicons/favicon-32x32.png" sizes="32x32"/> 
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">
+    <link href="main.css" rel="stylesheet"></head> 
+    <body> 
+        <noscript>You need to enable JavaScript to run this app.</noscript> 
+        <div id="application"></div>        
+    <script type="text/javascript" src="main.js"></script></body>
 </html>
