--- a/packages/server/index.html
+++ b/packages/server/index.html
@@ -6,6 +6,7 @@
         <meta name="theme-color" content="#e34225"> 
         <meta name="base_url" content="{{{baseUrl}}}"> 
         <meta name="csrf_token" content="{{{csrfToken}}}"> 
+        <meta name="merchant_id" content="{{{merchantId}}}">
         <link rel="manifest" href="/manifest.json" />
         <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://www.qasir.id/images/favicons/apple-touch-icon-144x144.png"/> 
         <link rel="icon" type="image/png" href="https://www.qasir.id/images/favicons/favicon-32x32.png" sizes="32x32"/> 
